# coverage-agent

./: .copilotignore  .env.example  .gitignore  BOOT.md  CORRECTIVE_REPORT.md  MASTER_PROMPT.md  README.md  REFACTOR_REPORT.md  pyproject.toml  run_coverage.ps1  verify_e2e.py
.github/: copilot-instructions.md
agents/: README.md  coverage-orchestrator.md  repair-agent.md  test-body-agent.md  test-intent-agent.md
agents/_archive/: classification-agent.md  dependency-graph-agent.md  discovery-agent.md  fixture-agent.md  (+7 more)
app/: __init__.py  main.py
coverage_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: RUNBOOK.md  agent-json-protocol.md  archetype-policy.md  architecture-review.md  batch-handoff.md  canonical-prohibitions.md  deterministic-architecture.md  developer-guide.md  freebuilder-policy.md  performance-tuning.md  python-pipeline.md  semantic-index-architecture.md  telemetry-and-finops.md  token-minimization-strategy.md  v2-architecture.md  vscode-copilot-execution-guide.md
orchestrator/: __init__.py  batch_protocol.py  batch_runner.py  config.py  cost_telemetry.py  generation.py  graph.py  graph_state.py  llm_gateway.py  nodes.py  one_cycle.py  prompts.py  providers.py  workspace_volumetry.py
prompts/: README.md  handoff-generation.md  handoff-repair.md
repair-rules/: README.md  builders.rules  imports.rules  junit.rules  mockito.rules  quality.rules  spring.rules  spy-ambiguity.rules  string-literals.rules  verify-count.rules
templates/: README.md  junit5-mockito.java  reactive-test.java  springboot-test.java  webmvc-test.java
(+214 files in other folders)
