[project]
name = "coverage-agent"
version = "2.0.0a0"
description = "Agente autónomo de cobertura de tests Java — orquestación LangGraph + LangChain + gateway LiteLLM sobre un núcleo determinista (gates G1-G8, presupuesto por construcción)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }

# El núcleo determinista (tools/python) no requiere dependencias externas más allá
# de jsonschema. La capa de orquestación v2 agrega LiteLLM / LangChain / LangGraph.
dependencies = [
    # Núcleo determinista (tools/python) — antes en tools/python/requirements.txt.
    "jsonschema>=4.21,<5",
    "lxml>=5.1",
    "javalang>=0.13",
    # Capa de orquestación v2.
    "litellm>=1.55,<2",
    "langgraph>=0.2.50,<0.3",
    "langchain-core>=0.3.20,<0.4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
]
observability = [
    "langfuse>=2.50,<3",
]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Paquete de orquestación v2. El núcleo determinista vive en tools/python y se
# invoca por ruta (subprocess / sys.path), no como paquete instalable.
packages = ["orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/python/tests"]
python_files = ["test_*.py"]
